# FDS_Project

./: .gitignore  Colab.ipynb  Notebook.ipynb  README.md  local_training_notebook.ipynb  pyproject.toml
src/: ResNet18.py  Resnet18.py  Vae.py  VaeA.py  VaeB.py  VaeC.py  VaeD.py  engine.py  plots.py  pre_processing.py
src/other_Vae_options/: VaeB.py  VaeD.py
